--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,1 +1,11 @@
-# Entrance of the My Blog
+---
+type: page
+title: 仏の顔も残弾1
+date: 2023-01-01
+---
+
+# Nextra
+
+このサイトは、Twitterを始めSNSに連投される写真や動画付き投稿から人類、さらに生物の生殖活動の何たるかを分析探究するブログです。ただただえっちな目的のための研究です。
+
+![Image](../public/original.jpg)
