--- a/pages/posts/sex-fun.mdx
+++ b/pages/posts/sex-fun.mdx
@@ -1,7 +1,7 @@
 ---
 title: 人間が生殖活動に趣味趣向と一時的な快楽を求める理由
 date: 2022/12/28
-description: E生物学的に見ると、人間は個体群を維持し、種の多様性を保つために、生殖を行わざるをえません。そのため、人間は、生殖能力を有する一定期間を持ち、その間に生殖を行うことが望まれます。
+description: 生物学的に見ると、人間は個体群を維持し、種の多様性を保つために、生殖を行わざるをえません。そのため、人間は、生殖能力を有する一定期間を持ち、その間に生殖を行うことが望まれます。
 tag: Sex, Pleasure
 author: ぴぎ太
 ---
