--- a/pages/posts/1_affliate-charenge-type-ero.mdx
+++ b/pages/posts/1_affliate-charenge-type-ero.mdx
@@ -2,7 +2,7 @@
 title: 【アフィ報酬への挑戦】エロカテゴリでのアフィリエイト報酬を得る挑戦 基本環境整備 v.1
 date: 2022/12/23
 description: アフィリエイトで報酬を得るチャレンジ中。2023年から本格始動
-tag: Affiliate, Charenge
+tag: Affiliate, Challenge
 author: ぴぎ太
 ---
 
