--- a/pages/posts/sns-analitics-nanpa.mdx
+++ b/pages/posts/sns-analitics-nanpa.mdx
@@ -9,6 +9,8 @@ author: ぴぎ太
 # SNS上では、出会いにあふれている、ように見える
 しかも、SNSで投稿している人にはさらに女性からDMが来ているようにみえる。
 
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ぱっつん黒髪女子の献身的なフェラ、2022年もありがとう。暇な時間が合うインスタントな出会い、趣味や性癖が合う強烈な興味が引き合わせる出会い、SNS見ているとどうやらナンパやマッチングサービスにエネルギー投じるのは正義らしい <a href="https://t.co/brDG8Z8asF">pic.twitter.com/brDG8Z8asF</a></p>&mdash; 仏の顔も残弾1 (@Hpu7Jn) <a href="https://twitter.com/Hpu7Jn/status/1609107723999916032?ref_src=twsrc%5Etfw">December 31, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 なぜだろうか、不思議だ。  
 良くも悪くも「透明」に見える事が重要であるようだ。それが実際の透明であるかはどうでもいいのだろう。透明っぽっく見えるのが重要なのだ。
 
